# collider

./: .clippy.toml  .dockerignore  .env.example  .env.local  .env.production.example  .gitignore  Cargo.toml  Dockerfile  README.md  ab_test.sh  big_load_test.sh  docker-compose.override.yml  docker-compose.production.yml  docker-compose.replica.yml  docker-compose.test.yml  docker-compose.yml  justfile  justfile.k3s-pipeline  justfile.lean  justfile.pipeline  log.txt  openapi.yml  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml  deploy.yml  main.yml
application/events/command-handlers/: Cargo.toml
application/events/command-handlers/src/: lib.rs
application/events/query-handlers/: Cargo.toml
application/events/query-handlers/src/: lib.rs
application/users/command-handlers/: Cargo.toml
application/users/command-handlers/src/: lib.rs
application/users/query-handlers/: Cargo.toml
application/users/query-handlers/src/: lib.rs
benches/: http_bench.rs
benchmarks/: Cargo.toml
benchmarks/benches/: cli_bench.rs  criterion_bench.rs  http_bench.rs
benchmarks/src/: lib.rs
binaries/csv-exporter/: Cargo.toml
binaries/csv-exporter/src/: main.rs
binaries/migrator/: Cargo.toml
binaries/migrator/src/: main.rs
binaries/seeder/: Cargo.toml
binaries/seeder/src/: cli.rs  cli_progress.rs  error_handling.rs  lib.rs  main.rs  main_105.rs  main_2.rs  main_2_75s.rs  main_3.rs  main_75s.rs  main_direct.rs  prompts.rs
config/: pg_hba_replication.conf  postgresql.conf
docs/: api.md  cli.md
domains/analytics/: Cargo.toml
domains/analytics/commands/: Cargo.toml
domains/analytics/commands/src/: lib.rs  refresh_views.rs
domains/analytics/dao/: Cargo.toml
domains/analytics/dao/src/: analytics_views.rs  analytics_views_test.rs  lib.rs
domains/analytics/examples/: analytics_usage.rs
domains/analytics/http/: Cargo.toml
domains/analytics/http/src/: handlers.rs  lib.rs
domains/analytics/migrations/sql/: 002_analytics_views.down.sql  002_analytics_views.sql  004_analytics_views.down.sql  004_analytics_views.sql  004_create_analytics_views.down.sql  004_create_analytics_views.sql  005_seed_test_data.down.sql  005_seed_test_data.sql  006_refresh_views.down.sql  006_refresh_views.sql
domains/analytics/models/: Cargo.toml
domains/analytics/models/src/: lib.rs
domains/analytics/queries/: Cargo.toml
domains/analytics/queries/src/: lib.rs
domains/analytics/src/: aggregations.rs  analytics_service.rs  cache_keys.rs  event_processor.rs  lib.rs  materialized_views.rs  redis_metrics_updater.rs  time_buckets.rs
domains/events/commands/: Cargo.toml
domains/events/commands/src/: bulk_delete_events.rs  create_event.rs  delete_event.rs  lib.rs  update_event.rs
domains/events/commands/tests/: create_event_test.rs  delete_event_test.rs  mod.rs  update_event_test.rs
domains/events/dao/: Cargo.toml
domains/events/dao/src/: event_types.rs  events.rs  lib.rs
domains/events/dao/tests/: events_dao_test.rs
domains/events/handlers/: Cargo.toml
domains/events/handlers/src/: commands.rs  lib.rs  queries.rs
domains/events/http/: Cargo.toml
domains/events/http/src/: command_handlers.rs  handlers.rs  lib.rs  stats.rs
domains/events/http/tests/: handlers_test.rs
domains/events/models/: Cargo.toml
domains/events/models/src/: event_types.rs  events.rs  lib.rs  metadata.rs
domains/events/queries/: Cargo.toml
domains/events/queries/src/: cache_keys.rs  get_event.rs  get_user_events.rs  lib.rs  list_events.rs
domains/events/queries/tests/: get_event_test.rs  list_events_test.rs  mod.rs
domains/user/commands/: Cargo.toml
domains/user/commands/src/: create_user.rs  delete_user.rs  events.rs  lib.rs  update_user.rs
domains/user/dao/: Cargo.toml
domains/user/dao/src/: lib.rs
domains/user/events/: Cargo.toml
domains/user/events/src/: lib.rs
domains/user/handlers/: Cargo.toml
domains/user/handlers/src/: commands.rs  lib.rs  queries.rs
domains/user/http/: Cargo.toml
domains/user/http/src/: analytics_handlers.rs  analytics_integration.rs  command_handlers.rs  handlers.rs  lib.rs
domains/user/queries/: Cargo.toml
domains/user/queries/src/: cache_keys.rs  get_user.rs  get_user_by_name.rs  lib.rs  list_users.rs  user_analytics.rs  user_analytics.rs.bak
frontend/: biome.json  package-lock.json  package.json  vite.config.ts
infrastructure/: README.md  justfile
infrastructure/benchmarking/: Cargo.toml  Dockerfile.bench  Dockerfile.goose  README.md  criterion_bench.rs  critical-performance-test.sh  docker-compose-bench.yml  goose_load_test.rs  orchestrate-performance-tests.sh  performance-regression-detector.sh  run-criterion.sh  run-goose.sh  run_all_benchmarks.sh  run_load_test.sh
infrastructure/benchmarking/k6/: k6.dockerfile  load-test.js  run-k6.sh
infrastructure/benchmarking/k6/scenarios/: endurance-test.js  spike-test.js
infrastructure/benchmarking/scenarios/: comprehensive-scenarios.json  create_event.json  event-api-scenarios.yaml  mixed-workload.js  vegeta_targets.txt
infrastructure/benchmarking/yandex-tank/: ammo.txt  load.yaml  monitoring.xml  run_tank.sh
infrastructure/events/http/: Cargo.toml
infrastructure/events/http/src/: background_jobs.rs  lib.rs  stats.rs
k6-tests/: README.md  analytics-stress.js  full-system-stress.js  mass-delete-events.js  mass-get-events.js  mass-post-events.js  run-tests.sh  seed-10million.js  setup.js  verify-setup.sh
libs/seeders/: Cargo.toml  README.md
libs/seeders/src/: cli.rs  event_seeder.rs  event_type_seeder.rs  lib.rs  progress.rs  seeder_runner.rs  user_seeder.rs
libs/test-utils/: Cargo.toml  README.md
libs/test-utils/src/: lib.rs  postgres.rs  redis.rs  sql_migrator.rs  test_helpers.rs
libs/test-utils/tests/: migrator_tests.rs
scripts/: config.env.example  deploy.sh  live-profile-dashboard.sh  migrate.sh  monitor_pool.sh  primary-init.sql  profile-docker-app.sh  setup.sh  simple-profile-bench.sh  start-replica.sh  test-local.sh
server/: Cargo.toml  Dockerfile  Dockerfile.dev
server/src/: main.rs
server/test/: integration.rs
src/: main.rs
(+158 files in other folders)
