[workspace]
resolver = "2"
members = [
    "server",
    "domains/user/models",
    "domains/user/dao",
    "domains/user/commands",
    "domains/user/queries",
    "domains/user/http",
    "domains/events/models",
    "domains/events/dao",
    "domains/events/commands",
    "domains/events/queries",
    "domains/events/http",
    "domains/analytics",
    "domains/analytics/http",
    # Shared infrastructure
    "libs/persistence/database_traits",
    "libs/persistence/sql_connection",
    "libs/persistence/redis_connection",
    # Shared libs
    "libs/domain",
    "libs/test-utils",
    # Binaries
    "binaries/migrator",
]


[workspace.dependencies]
# Database
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
sea-orm-migration = { version = "1.1.10", features = ["dotenvy", "runtime-tokio-rustls", "sqlx-postgres", "with-uuid", "with-chrono"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
deadpool-redis = { version = "0.21.1", features = ["serde","connection-manager", "cache-aio", "json", ] }
redis = "0.31.0"
# Web framework
axum = "0.8.4"
axum-core = "0.5.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "compression-gzip", "cors"] }
http = "1.1.0"
moka = { version = "0.12.10", features = ["sync","quanta","future","logging"] }
bytes = "1.10.1"
flume = "0.11"
hyperloglogplus = "0.4.1"
fnv = "1.0"
# API Documentation
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.12"
async-trait = "0.1"
url = "2.5"
typed-builder = "0.21.0"
clap = { version = "4.4", features = ["derive"] }
# Environment
dotenvy = "0.15"


test-utils = { path = "libs/test-utils" }
analytics = { path = "domains/analytics" }
analytics-http = { path = "domains/analytics/http" }
user-models = { path = "domains/user/models" }
user-dao = { path = "domains/user/dao" }
user-commands = { path = "domains/user/commands" }
user-queries = { path = "domains/user/queries" }
user-http = { path = "domains/user/http" }
events-models = { path = "domains/events/models" }
events-dao = { path = "domains/events/dao" }
events-commands = { path = "domains/events/commands" }
events-queries = { path = "domains/events/queries" }
events-http = { path = "domains/events/http" }

# Shared persistence
database-traits = { path = "libs/persistence/database_traits" }
sql-connection = { path = "libs/persistence/sql_connection" }
redis-connection = { path = "libs/persistence/redis_connection" }
domain = { path = "libs/domain" }


[profile.release]
lto = "thin"          # Better parallelism vs "fat" LTO, 4-20% faster builds
strip = true
incremental = false   # Disable for release builds (better optimization)
codegen-units = 1     # Best optimization (slower compile, faster runtime)
opt-level = 3
panic = "abort"       # 10% smaller binaries, faster execution

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = 1

[profile.bench]
inherits = "release"
debug = true