[workspace]
resolver = "2"
members = [
    "server",
    "domains/users/models",
    "domains/users/commands",
    "domains/users/queries",
    "domains/users/errors",
    "domains/users/responses",
    "domains/events/models",
    "domains/events/commands",
    "domains/events/queries",
    "domains/events/errors",
    "domains/events/responses",
    "application/users/cache-keys",
    "application/users/command-handlers",
    "application/users/query-handlers",
    "application/events/cache-keys",
    "application/events/command-handlers",
    "application/events/query-handlers",
    # Infrastructure layer
    "infrastructure/users/dao",
    "infrastructure/events/dao",
    "infrastructure/users/http",
    "infrastructure/events/http",
    # Shared infrastructure
    "libs/persistence/database_traits",
    "libs/persistence/sql_connection",
    "libs/persistence/redis_connection",
    "libs/persistence/dao_utils",
    # Shared libs
    "libs/common-errors",
    "libs/test-utils",
    # Binaries
    "binaries/migrator",
    "binaries/seeder",
    "binaries/csv-exporter"
]


[workspace.dependencies]
# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
deadpool-redis = { version = "0.21.1", features = ["serde", "connection-manager", "cache-aio", "json", ] }
redis = "0.31.0"
# Web framework
axum = "0.8.4"
axum-core = "0.5.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "compression-gzip", "cors"] }
http = "1.1.0"
moka = { version = "0.12.10", features = ["sync", "quanta", "future", "logging"] }
bytes = "1.10.1"
flume = "0.11"

# API Documentation
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.12"
async-trait = "0.1"
url = "2.5"
typed-builder = "0.21.0"
clap = { version = "4.4", features = ["derive"] }
# Environment
dotenvy = "0.15"


# Shared infrastructure
test-utils = { path = "libs/test-utils" }
database-traits = { path = "libs/persistence/database_traits" }
sql-connection = { path = "libs/persistence/sql_connection" }
redis-connection = { path = "libs/persistence/redis_connection" }
dao-utils = { path = "libs/persistence/dao_utils" }
common-errors = { path = "libs/common-errors" }

# Domain layer
user-models = { path = "domains/users/models" }
user-commands = { path = "domains/users/commands" }
user-queries = { path = "domains/users/queries" }
user-errors = { path = "domains/users/errors" }
user-responses = { path = "domains/users/responses" }
events-models = { path = "domains/events/models" }
events-commands = { path = "domains/events/commands" }
events-queries = { path = "domains/events/queries" }
events-errors = { path = "domains/events/errors" }
events-responses = { path = "domains/events/responses" }

# Application layer  
user-command-handlers = { path = "application/users/command-handlers" }
user-query-handlers = { path = "application/users/query-handlers" }
user-cache-keys = { path = "application/users/cache-keys" }
events-command-handlers = { path = "application/events/command-handlers" }
events-query-handlers = { path = "application/events/query-handlers" }
events-cache-keys = { path = "application/events/cache-keys" }

# Infrastructure layer
user-dao = { path = "infrastructure/users/dao" }
user-http = { path = "infrastructure/users/http" }
events-dao = { path = "infrastructure/events/dao" }
events-http = { path = "infrastructure/events/http" }

[profile.release]
lto = "thin"          # Better parallelism vs "fat" LTO, 4-20% faster builds
strip = true
incremental = false   # Disable for release builds (better optimization)
codegen-units = 1     # Best optimization (slower compile, faster runtime)
opt-level = 3
panic = "abort"       # 10% smaller binaries, faster execution

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = 1

[profile.bench]
inherits = "release"
debug = true
