[package]
name = "collider"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Database
sea-orm.workspace = true
sqlx.workspace = true

events-http.workspace = true
events-commands.workspace = true
analytics-http.workspace = true
user-http.workspace = true
user-commands.workspace = true
test-utils.workspace = true
seeders = { path = "../libs/seeders" }
database-traits.workspace = true
sql-connection.workspace = true
redis-connection.workspace = true


# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Environment
dotenvy.workspace = true

# API Documentation
utoipa.workspace = true
utoipa-rapidoc.workspace = true