[package]
name = "collider"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Database
tokio-postgres.workspace = true
deadpool-postgres.workspace = true

events-http.workspace = true
events-commands.workspace = true
events-responses.workspace = true
events-queries.workspace = true
analytics-http.workspace = true
analytics.workspace = true
user-http.workspace = true
user-commands.workspace = true
user-responses.workspace = true
test-utils.workspace = true
database-traits.workspace = true
sql-connection.workspace = true
redis-connection.workspace = true


# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Environment
dotenvy.workspace = true

# API Documentation
utoipa.workspace = true
utoipa-rapidoc.workspace = true

[dev-dependencies]
analytics-dao.workspace = true
events-dao.workspace = true
events-handlers.workspace = true
user-dao.workspace = true
user-handlers.workspace = true
user-events.workspace = true
flume.workspace = true
anyhow.workspace = true

[[test]]
name = "integration"
path = "test/integration.rs"