[package]
name = "collider"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true
events-http.workspace = true
events-commands.workspace = true
events-responses.workspace = true
user-http.workspace = true
user-commands.workspace = true
user-responses.workspace = true
sql-connection.workspace = true
redis-connection.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true

# Environment
dotenvy.workspace = true

# API Documentation
utoipa.workspace = true
utoipa-rapidoc.workspace = true

[dev-dependencies]
anyhow.workspace = true