[package]
name = "csv-exporter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "csv-exporter"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }