[package]
name = "migrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "migrator"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Migration dependencies
async-trait.workspace = true

# CLI and TUI dependencies
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"

# Local dependencies
sql-connection = { path = "../../libs/persistence/sql_connection" }
database-traits = { path = "../../libs/persistence/database_traits" }
test-utils = { path = "../../libs/test-utils" }