[package]
name = "migrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "migrator"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.5", features = ["derive"] }

sql-connection = { path = "../../libs/persistence/sql_connection" }
test-utils = { path = "../../libs/test-utils" }