[package]
name = "seeder"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }

futures = "0.3"
flume = "0.11.1"
rayon = "1.10.0"
itertools = "0.14.0"

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
