[package]
name = "seeder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
phf = { version = "0.12.1", features = ["macros"] }
phf_macros = "0.12.1"
tokio.workspace = true
anyhow.workspace = true
deadpool-postgres.workspace = true
tokio-postgres = { workspace = true, features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rand = { version = "0.8", features = ["small_rng"] }
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }

# Local dependencies
events-models = { path = "../../domains/events/models" }

futures = "0.3"
flume = "0.11.1"
rayon = "1.10.0"
num_cpus = "1.17.0"