[package]
name = "analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
serde_json.workspace = true
analytics-models.workspace = true
analytics-queries.workspace = true
user-events.workspace = true
redis-connection.workspace = true
dashmap.workspace = true

[dev-dependencies]
test-utils.workspace = true
anyhow.workspace = true