[package]
name = "test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
sqlx.workspace = true
deadpool-redis.workspace = true
sea-orm.workspace = true
sql-connection.workspace = true
redis-connection.workspace = true
serde.workspace = true
uuid.workspace = true
