[package]
name = "test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
deadpool-redis.workspace = true
sql-connection.workspace = true
redis-connection.workspace = true
serde.workspace = true
serde_json.workspace = true

# Modern test containers
testcontainers-modules = { version = "0.12.1", features = ["postgres", "redis"] }
