[package]
name = "events-command-handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
events-commands.workspace = true
events-errors.workspace = true
events-responses.workspace = true
events-dao.workspace = true
sql-connection.workspace = true
database-traits.workspace = true
tracing.workspace = true
[dev-dependencies]
anyhow.workspace = true
test-utils.workspace = true
tokio.workspace = true
chrono.workspace = true
serde_json.workspace = true