[package]
name = "analytics-dao"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
analytics-models.workspace = true
analytics-commands.workspace = true
sql-connection.workspace = true
database-traits.workspace = true
dao-utils.workspace = true

[dev-dependencies]
tokio.workspace = true
test-utils.workspace = true
anyhow.workspace = true