[package]
name = "analytics-http"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum.workspace = true
sql-connection.workspace = true

# Analytics domain
analytics-dao = { path = "../dao" }
analytics-models = { path = "../models" }
analytics-commands = { path = "../commands" }
analytics-queries = { path = "../queries" }
analytics = { path = ".." }

# Domain lib
domain.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
utoipa.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dev-dependencies]
test-utils.workspace = true