[package]
name = "analytics-queries"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
analytics-models.workspace = true
utoipa.workspace = true
redis-connection.workspace = true

[dev-dependencies]
tokio.workspace = true
test-utils.workspace = true
anyhow.workspace = true