[package]
name = "events-commands"
version = "0.1.0"
edition = "2024"

[dependencies]
# Domain dependencies
events-models = { path = "../models" }
events-dao = { path = "../dao" }

# Infrastructure
database-traits.workspace = true
sql-connection.workspace = true
sea-orm = { workspace = true }

# Core dependencies
uuid = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
test-utils = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }