[package]
name = "events-dao"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
events-models = { path = "../models" }
events-commands = { path = "../commands" }
database-traits.workspace = true
sql-connection.workspace = true
dao-utils.workspace = true