[package]
name = "events-handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
events-models = { path = "../models" }
events-queries = { path = "../queries" }
events-commands = { path = "../commands" }
events-dao = { path = "../dao" }
events-errors = { path = "../errors" }
events-responses = { path = "../responses" }
redis-connection.workspace = true
sql-connection.workspace = true
database-traits.workspace = true
tracing.workspace = true
uuid.workspace = true
[dev-dependencies]
anyhow.workspace = true
test-utils.workspace = true
tokio.workspace = true