[package]
name = "events-http"
version = "0.1.0"
edition = "2024"

[dependencies]
# Domain dependencies
events-models = { path = "../models" }
events-handlers = { path = "../handlers" }
events-responses = { path = "../responses" }
events-commands = { path = "../commands" }
events-queries = { path = "../queries" }
events-dao = { path = "../dao" }

# Infrastructure
sql-connection.workspace = true
domain.workspace = true
database-traits.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true

# Web framework
axum = { workspace = true, features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
utoipa.workspace = true

# Event processing
flume.workspace = true

[dev-dependencies]
test-utils.workspace = true
events-dao = { path = "../dao" }
database-traits.workspace = true
tokio = { workspace = true, features = ["test-util"] }
anyhow.workspace = true
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }
axum = { workspace = true, features = ["macros"] }
tokio-postgres.workspace = true
deadpool-postgres.workspace = true