[package]
name = "user-dao"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
sql-connection.workspace = true
user-models = { path = "../models" }
database-traits.workspace = true

[dev-dependencies]
sea-orm-migration.workspace = true
test-utils = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }