[package]
name = "user-dao"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
sql-connection.workspace = true
user-models = { path = "../models" }
user-commands = { path = "../commands" }
user-errors = { path = "../errors" }
database-traits.workspace = true
dao-utils = { path = "../../../libs/persistence/dao_utils" }

[dev-dependencies]
# sea-orm-migration.workspace = true # removed for tokio-postgres migration
test-utils.workspace = true
tokio.workspace = true
serde.workspace = true