[package]
name = "user-events"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core types
uuid.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Events domain integration
events-commands = { path = "../../events/commands" }